--- a/style.css
+++ b/style.css
@@ -4,7 +4,65 @@ header, aside, footer {
 }
 
 header {
-  border-bottom: solid 1px #a1bf81;
+  width: 100%;
+  height: 150px;
+  border-bottom: solid 2px #a1bf81;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  margin: auto;
+  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+main section {
+  width: 400px;
+  height: 500px;
+  margin: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 0 15px #a09f9f;
+}
+
+aside {
+  width: 400px;
+  height: 50px;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  border-top: solid 2px #a1bf81;
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  bottom: 0px;
+}
+footer nav {
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+a {
+  text-decoration: none;
+  color: #fdcb46;
+}
+
+#container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 #menu1 {
@@ -25,10 +83,6 @@ header {
 #menu4 {
   background-color: #fff5fe;
   color: #72bf56;
-}
-
-footer {
-  border-top: solid 1px #a1bf81;
 }
 
 /*# sourceMappingURL=style.css.map */
