--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "Metropolis";
   src: url("polices/Metropolis-Bold.woff") format("woff");
@@ -254,10 +253,8 @@ i {
   height: 8px;
   margin: 5px;
   border-radius: 50%;
-  animation: point 3000ms ease-in-out both infinite;
+  animation: point 2000ms ease-in-out both alternate infinite;
   transform-origin: bottom;
-  animation-direction: alternate;
-  animation-duration: 2000ms;
 }
 #suspension .point--1 {
   animation-delay: 300ms;
@@ -302,6 +299,20 @@ i {
   justify-content: space-between;
   align-items: center;
 }
+#menu1 h3, #menu2 h3, #menu3 h3, #menu4 h3 {
+  margin-bottom: 0px;
+}
+#menu1 h3:hover + .bordure, #menu2 h3:hover + .bordure, #menu3 h3:hover + .bordure, #menu4 h3:hover + .bordure {
+  transform: scaleX(1);
+}
+#menu1 .bordure, #menu2 .bordure, #menu3 .bordure, #menu4 .bordure {
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 1000ms ease-in-out;
+  width: 100%;
+  height: 3px;
+  margin-bottom: 0px;
+}
 
 #menu1 {
   font-size: 25px;
@@ -320,6 +331,7 @@ i {
   font-weight: normal;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 0px;
 }
 #menu1 footer {
   font-family: "devonshire";
@@ -329,6 +341,9 @@ i {
 #menu1 img {
   width: 35%;
   height: 40%;
+}
+#menu1 .bordure {
+  background-color: #3c1218;
 }
 
 #menu2 {
@@ -340,19 +355,28 @@ i {
   background: -webkit-linear-gradient(left, #e27f0e, #8f5aff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 40px;
+  font-size: 60px;
 }
 #menu2 h3 {
   font-size: 30px;
 }
-#menu2 #entrée {
+#menu2 #entree {
   color: #c67412;
+}
+#menu2 #entree .bordure {
+  background-color: #c67412;
 }
 #menu2 #plat {
   color: #a56799;
 }
+#menu2 #plat .bordure {
+  background-color: #a56799;
+}
 #menu2 #dessert {
   color: #6e4ccc;
+}
+#menu2 #dessert .bordure {
+  background-color: #6e4ccc;
 }
 #menu2 img {
   width: 30%;
@@ -378,6 +402,15 @@ i {
   width: 30%;
   height: 40%;
 }
+#menu3 #entree .bordure {
+  background-color: #0228dd;
+}
+#menu3 #plat .bordure {
+  background-color: #0670f3;
+}
+#menu3 #dessert .bordure {
+  background-color: #229df9;
+}
 
 #menu4 {
   font-size: 30px;
@@ -394,6 +427,13 @@ i {
 }
 #menu4 h3 {
   font-size: 50px;
+}
+#menu4 img {
+  width: 30%;
+  height: 40%;
+}
+#menu4 .bordure {
+  background-color: #80cb5e;
 }
 
 a {
